feat(analytics): implement server-side pagination for analytics events